--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 alembic==1.13.3
 blinker==1.8.2
+certifi==2024.8.30
 click==8.1.7
 coverage==7.6.3
+distlib==0.3.9
 exceptiongroup==1.2.2
+filelock==3.16.1
 Flask==3.0.3
 Flask-Admin==1.6.1
 Flask-Migrate==4.0.7
@@ -14,6 +17,8 @@ Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==3.0.1
 packaging==24.1
+pipenv==2024.1.0
+platformdirs==4.3.6
 pluggy==1.5.0
 PyMySQL==1.1.1
 pytest==8.3.3
@@ -23,5 +28,6 @@ python-dotenv==1.0.1
 SQLAlchemy==2.0.36
 tomli==2.0.2
 typing_extensions==4.12.2
+virtualenv==20.26.6
 Werkzeug==3.0.4
 WTForms==3.1.2
