--- a/Pipfile
+++ b/Pipfile
@@ -4,39 +4,39 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-alembic = "==1.13.3"
-blinker = "==1.8.2"
-certifi = "==2024.8.30"
-click = "==8.1.7"
-coverage = "==7.6.3"
-distlib = "==0.3.9"
-exceptiongroup = "==1.2.2"
-filelock = "==3.16.1"
-flask = "==3.0.3"
-flask-admin = "==1.6.1"
-flask-migrate = "==4.0.7"
-flask-sqlalchemy = "==3.1.1"
-greenlet = "==3.1.1"
-iniconfig = "==2.0.0"
-itsdangerous = "==2.2.0"
-jinja2 = "==3.1.4"
-mako = "==1.3.5"
-markupsafe = "==3.0.1"
-packaging = "==24.1"
-pipenv = "==2024.1.0"
-platformdirs = "==4.3.6"
-pluggy = "==1.5.0"
-pymysql = "==1.1.1"
-pytest = "==8.3.3"
-pytest-cov = "==5.0.0"
-pytest-flask = "==1.3.0"
-python-dotenv = "==1.0.1"
-sqlalchemy = "==2.0.36"
-tomli = "==2.0.2"
-typing-extensions = "==4.12.2"
-virtualenv = "==20.26.6"
-werkzeug = "==3.0.4"
-wtforms = "==3.1.2"
+alembic = "*"
+blinker = "*"
+certifi = "*"
+click = "*"
+coverage = "*"
+distlib = "*"
+exceptiongroup = "*"
+filelock = "*"
+flask = "*"
+flask-admin = "*"
+flask-migrate = "*"
+flask-sqlalchemy = "*"
+greenlet = "*"
+iniconfig = "*"
+itsdangerous = "*"
+jinja2 = "*"
+mako = "*"
+markupsafe = "*"
+packaging = "*"
+pipenv = "*"
+platformdirs = "*"
+pluggy = "*"
+pymysql = "*"
+pytest = "*"
+pytest-cov = "*"
+pytest-flask = "*"
+python-dotenv = "*"
+sqlalchemy = "*"
+tomli = "*"
+typing-extensions = "*"
+virtualenv = "*"
+werkzeug = "*"
+wtforms = "*"
 
 [dev-packages]
 
